--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@0xpass/passport": "^0.0.8",
+    "@0xpass/passport-viem": "^0.0.3",
+    "@react-oauth/google": "^0.11.1",
+    "axios": "latest",
+    "next": "13.5.6",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "viem": "^1.16.6"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3"
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
