--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@0xpass/passport": "^0.1.2",
-    "@0xpass/passport-viem": "^0.0.3",
+    "@0xpass/passport": "^0.1.6",
+    "@0xpass/passport-viem": "^0.0.8",
+    "@0xpass/webauthn-signer": "^0.0.3",
     "@react-oauth/google": "^0.11.1",
     "@textea/json-viewer": "^3.2.3",
     "axios": "latest",
