--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@0xpass/key-signer": "^1.0.0",
     "@0xpass/passport": "^1.0.0",
     "@0xpass/passport-viem": "^1.0.0",
     "@0xpass/webauthn-signer": "^1.0.0",
