--- a/package.json
+++ b/package.json
@@ -15,13 +15,24 @@
     "@0xpass/webauthn-signer": "^2.0.0",
     "@clerk/nextjs": "^4.29.10",
     "@clerk/themes": "^1.7.11",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-oauth/google": "^0.11.1",
     "@textea/json-viewer": "^3.2.3",
     "axios": "latest",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "next": "13.5.6",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.9.4"
   },
   "devDependencies": {
